[package]
name = "image-maker"
version = "0.1.1"
authors = ["belowthetree <1363558876@qq.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple image maker for TisuOS"
repository = "https://github.com/TisuOS/image-maker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tianmu-fs = "0.1.0"
easy-fs = "0.1.1"